--- a/.uranio/package.json
+++ b/.uranio/package.json
@@ -2,30 +2,24 @@
   "name": "uranio-client",
   "main": "dist/index.js",
   "scripts": {
-    "build": "yarn tsc -b",
-    "dev": "yarn tsc -w",
+    "build": "npx tsc -b",
+    "dev": "npx tsc -w",
     "dev:base": "node -r source-map-support/register -r dotenv/config ./dist/run.js",
-    "dev:run": "yarn tsc-watch --onSuccess \"yarn dev:base\"",
+    "dev:run": "npx tsc-watch --onSuccess \"npm run dev:base\"",
     "dev:test": "node --import tsx --test --test-reporter spec --watch ./tests/*.test.ts",
     "test": "node --no-warnings --import tsx --test --test-reporter spec tests/**/*test.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@types/node": "^25.3.0",
     "dotenv": "^16.3.1",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "prettier": "^3.1.1",
+    "eslint": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-json": "^4.0.1",
+    "prettier": "3.8.1",
     "source-map-support": "^0.5.21",
-    "tsc-watch": "^6.0.0",
+    "tsc-watch": "^7.2.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "uranio": "1.0.5"
